--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rich Trott <rtrott@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "htmlparser2": "^3.9.2"
+    "htmlparser2": "^3.9.2",
+    "standard": "^10.0.3"
   }
 }
