add test script, ignore missing container elements

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard && node test/test.js"
   },
   "author": "Rich Trott <rtrott@gmail.com>",
   "license": "MIT",
