update standard, move to dev-dependencies

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Rich Trott <rtrott@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "htmlparser2": "^3.9.2",
-    "standard": "^10.0.3"
+    "htmlparser2": "^3.9.2"
+  },
+  "devDependencies": {
+    "standard": "^11.0.1"
   }
 }
